# options

./: README.md  pyproject.toml
config/: tws_nse.xml  tws_snp.xml  var.yml
data/: unds.pkl
data/master/: column_maps.yml  df_journal_opt.pkl  nse2ibkr.yml  nse_ib_reports.pkl  snp_ib_reports.pkl  snp_indexes.yml
data/nse/: df_all_opts.pkl  df_chains.pkl  df_naked_targets.pkl  df_nakeds.pkl  df_opt_margins.pkl  df_opt_prices.pkl  df_qualified_calls.pkl  df_qualified_puts.pkl  df_sow.pkl  df_und_prices.pkl  lots.pkl  unds.pkl
data/raw/: NSE_20170622_20171229.csv  NSE_20180102_20181231.csv  NSE_20190102_20191231.csv  NSE_20200102_20201231.csv  NSE_20210104_20211231.csv  NSE_20220103_20221230.csv  NSE_20230102_20231229.csv  NSE_20240101_20240223.csv  NSE_sow_04_02_PM_on_19-Feb-2024.pkl  NSE_sow_08_56_AM_on_21-Feb-2024.pkl  NSE_sow_10_00_AM_on_19-Feb-2024.pkl  NSE_sow_11_14_AM_on_15-Feb-2024.pkl  NSE_sow_12_45_AM_on_26-Feb-2024.pkl  SNP_20170224_20171229.csv  SNP_20180102_20181231.csv  (+11 more)
data/snp/: df_sow.pkl  (+8 more)
journal/: nse,_opts.pkl  snp,_opts.pkl
notebooks/: _notebook_template.ipynb  engine.ipynb  history_of_ibkr.ipynb  log_wrapper.ipynb  nse.ipynb  snp.ipynb  ztemp.ipynb
src/: dclass.py  nse.py  run.py  snp.py  utils.py  xtras.py  zexperiments.py
tests/: _notebook_template.ipynb  base.ipynb  journal.ipynb  margin_test.ipynb  one_symbol.ipynb  opt_margins_nse.ipynb  opt_margins_snp.ipynb  option_chain.py  scrape_nse_margins.ipynb  states.ipynb  zerodha_scrape.ipynb  znse_expiries.ipynb  znse_opt_scrapper.ipynb  zrule_of_25.ipynb  ztest.ipynb  ztest_margins.ipynb
(+10 files in other folders)
