[project]
name = ""
version = ""
description = ""
authors = [
    {name = "reservoirinvest", email = "reservoirinvest@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "lab>=8.0",
    "pandas>=2.1.1",
    "lxml>=4.9.3",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "ib-insync>=0.9.86",
    "from-root>=1.3.0",
    "tqdm>=4.66.1",
    "yahooquery>=2.3.7",
    "nsepython>=2.8",
    "matplotlib>=3.8.2",
    "pandas-market-calendars>=4.4.0",
    "tuna>=0.5.11",
    "bs4>=0.0.2",
    "icecream>=2.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

